--- a/Frontend/src/app/home/home.page.html
+++ b/Frontend/src/app/home/home.page.html
@@ -1,14 +1,30 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar slot="primary">
+        <ion-title>
+            90minut.pl
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+    <ion-list>
+        <ion-item-sliding *ngFor="let league of leagues">
+            <ion-item (click)="loadLeague(league.path)">
+                <ion-label>{{ league.name }}</ion-label>
+            </ion-item>
+            <ion-item-options side="end">
+                <ion-item-option color="danger" (click)="delete(league)">Usuń</ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button>
+            <ion-icon name="add-circle"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-list side="start">
+            <ion-card class="card" (click)="addLeague()">
+                <ion-label>Liga</ion-label>
+            </ion-card>
+        </ion-fab-list>
+    </ion-fab>
 </ion-content>
