--- a/Frontend/src/app/home/home.page.html
+++ b/Frontend/src/app/home/home.page.html
@@ -9,8 +9,11 @@
 <ion-content>
     <ion-list>
         <ion-item-sliding *ngFor="let league of leagues">
-            <ion-item (click)="loadLeague(league.path)">
-                <ion-label>{{ league.name }}</ion-label>
+            <ion-item (click)="loadLeague(league)">
+                <ion-label>
+                    <h2>{{ league.name }}</h2>
+                    <ion-note>{{ league.path }}</ion-note>
+                </ion-label>
             </ion-item>
             <ion-item-options side="end">
                 <ion-item-option color="danger" (click)="delete(league)">Usuń</ion-item-option>
