Fetching JSON data from public API

--- a/Frontend/src/app/pages/league/league.page.html
+++ b/Frontend/src/app/pages/league/league.page.html
@@ -4,12 +4,12 @@
         <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>
-      <h2></h2>{{ league.name }}
+      <h2>{{ league.name }}</h2>
       <ion-note>{{ league.path }}</ion-note>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  Test
+  {{ tables }}
 </ion-content>
