Added tabs page

--- a/Frontend/src/app/pages/league/league.page.html
+++ b/Frontend/src/app/pages/league/league.page.html
@@ -11,5 +11,18 @@
 </ion-header>
 
 <ion-content>
-  {{ tables }}
+
 </ion-content>
+
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="table">
+      <ion-icon name="clipboard"></ion-icon>
+      <ion-label>Tabela</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="matches">
+      <ion-icon name="football"></ion-icon>
+      <ion-label>Mecze</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
