--- a/Frontend/src/app/pages/matches/matches.page.html
+++ b/Frontend/src/app/pages/matches/matches.page.html
@@ -1,1 +1,15 @@
-<h1>Mecze</h1>
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref=""></ion-back-button>
+        </ion-buttons>
+        <ion-title>
+        <h2>{{ league.name }}</h2>
+        <ion-note>{{ league.path }}</ion-note>
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
+
+<ion-content>
+    Mecze
+</ion-content>
