--- a/Frontend/src/app/pages/table/table.page.html
+++ b/Frontend/src/app/pages/table/table.page.html
@@ -1,3 +1,15 @@
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref=""></ion-back-button>
+        </ion-buttons>
+        <ion-title>
+        <h2>{{ league.name }}</h2>
+        <ion-note>{{ league.path }}</ion-note>
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
+
 <ion-content>
   Tabela
 </ion-content>
