Added some css rules

--- a/Frontend/src/app/pages/matches/matches.page.scss
+++ b/Frontend/src/app/pages/matches/matches.page.scss
@@ -6,3 +6,15 @@ h2 {
 .title-md {
     padding: 10px;
 }
+
+.left {
+    text-align: left;
+}
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
