--- a/Frontend/src/app/pages/matches/matches.page.html
+++ b/Frontend/src/app/pages/matches/matches.page.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-card *ngFor="let matchDay of data.matches">
+    <ion-card *ngFor="let matchDay of data.match_days">
         <ion-card-header>
             <ion-card-title>{{ matchDay.date }}</ion-card-title>
             <ion-card-subtitle *ngIf="matchDay.pause !== null">{{ matchDay.pause }}</ion-card-subtitle>
@@ -22,9 +22,9 @@
                 <ion-item *ngFor="let match of matchDay.matches">
                     <ion-grid>
                         <ion-row>
-                            <ion-col size="5">{{ match.home }}</ion-col>
-                            <ion-col size="2">{{ match.result }}</ion-col>
-                            <ion-col size="5">{{ match.guest }}</ion-col>
+                            <ion-col size="5" class="left">{{ match.home }}</ion-col>
+                            <ion-col size="2" class="center">{{ match.result }}</ion-col>
+                            <ion-col size="5" class="right">{{ match.guest }}</ion-col>
                         </ion-row>
                         <ion-row *ngIf="match.walkover == true">
                             <ion-col size="12">Walkower</ion-col>
