--- a/Frontend/src/theme/variables.scss
+++ b/Frontend/src/theme/variables.scss
@@ -4,16 +4,16 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary: #fff;
+  --ion-color-primary-rgb: 2255, 255, 255;
+  --ion-color-primary-contrast: #333;
+  --ion-color-primary-contrast-rgb: 51, 51, 51;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
-  --ion-color-secondary-rgb: 12, 209, 232;
+  --ion-color-secondary: #f8f8f8;
+  --ion-color-secondary-rgb: 248, 248, 248;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
   --ion-color-secondary-shade: #0bb8cc;
