--- a/Frontend/src/app/home/home.page.html
+++ b/Frontend/src/app/home/home.page.html
@@ -13,7 +13,7 @@
 
 <ion-content>
     <ion-list>
-        <ion-item-sliding *ngFor="let league of leagues">
+        <ion-item-sliding *ngFor="let league of leagues; let i = index">
             <ion-item lines="none" (click)="loadLeague(league)">
                 <ion-label>
                     <h2>{{ league.name }}</h2>
@@ -21,7 +21,7 @@
                 </ion-label>
             </ion-item>
             <ion-item-options side="end">
-                <ion-item-option  (click)="delete(league)">
+                <ion-item-option  (click)="modyfy(league, i)">
                     <ion-icon class="modyfy" name="settings"></ion-icon>
                 </ion-item-option>
                 <ion-item-option  (click)="delete(league)">
