--- a/Frontend/src/theme/variables.scss
+++ b/Frontend/src/theme/variables.scss
@@ -4,10 +4,10 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #fff;
-  --ion-color-primary-rgb: 2255, 255, 255;
-  --ion-color-primary-contrast: #333;
-  --ion-color-primary-contrast-rgb: 51, 51, 51;
+  --ion-color-primary: #3171e0;
+  --ion-color-primary-rgb: 49, 113, 224;
+  --ion-color-primary-contrast: #fff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
