Added confirm button when click to delete league

--- a/Frontend/src/app/app.scss
+++ b/Frontend/src/app/app.scss
@@ -9,3 +9,8 @@ ion-header {
     box-shadow: 0px 0px 2px #888;
     font-size: 25px;
 }
+
+.alert-btn {
+    background-color: #3171e0 !important;
+    color: #fff !important;
+}
