--- a/Frontend/src/app/pages/matches/matches.page.html
+++ b/Frontend/src/app/pages/matches/matches.page.html
@@ -19,20 +19,22 @@
         
         <ion-card-content>
             <ion-list>
-                <ion-item *ngFor="let match of matchDay.matches">
-                    <ion-grid>
-                        <ion-row>
-                            <ion-col size="5" class="left">{{ match.home }}</ion-col>
-                            <ion-col size="2" class="center">{{ match.result }}</ion-col>
-                            <ion-col size="5" class="right">{{ match.guest }}</ion-col>
-                        </ion-row>
-                        <ion-row *ngIf="match.walkover == true">
-                            <ion-col size="12">Walkower</ion-col>
-                        </ion-row>
-                        <ion-row *ngIf="match.info">
-                            <ion-col>{{ match.info }}</ion-col>
-                        </ion-row>
-                    </ion-grid>
+                <ion-item lines="none" *ngFor="let match of matchDay.matches; let i = index">
+                    <div class="list-item c{{ i%2 }}">
+                        <ion-grid>
+                            <ion-row>
+                                <ion-col size="5" class="left">{{ match.home }}</ion-col>
+                                <ion-col size="2" class="center">{{ match.result }}</ion-col>
+                                <ion-col size="5" class="right">{{ match.guest }}</ion-col>
+                            </ion-row>
+                            <ion-row *ngIf="match.walkover == true">
+                                <ion-col size="12" class="walkover"><ion-icon name="alert"></ion-icon> Walkower</ion-col>
+                            </ion-row>
+                            <ion-row *ngIf="match.info">
+                                <ion-col class="info"><ion-icon name="information-circle"></ion-icon> {{ match.info }}</ion-col>
+                            </ion-row>
+                        </ion-grid>
+                    </div>
                 </ion-item>
             </ion-list>
         </ion-card-content>
