--- a/Frontend/src/app/pages/matches/matches.page.scss
+++ b/Frontend/src/app/pages/matches/matches.page.scss
@@ -18,3 +18,35 @@ h2 {
 .right {
     text-align: right;
 }
+
+.card-content-md {
+    padding: 0px;
+}
+
+ion-item{
+    --inner-padding-end: 0px;
+    --padding-start:0px
+}
+
+.list-item {
+    background-color: #fff;
+    border-left: 3px solid #3171e0;
+    width: 100%;
+    height: 100%;
+
+    &.c1 {
+        background-color: #f6f6f6;
+    }
+}
+
+.list-md {
+    padding: 0px;
+}
+
+.walkover {
+    color: #f44242;
+}
+
+.info {
+    color: #666;
+}
