Design improvements on the mathces page

--- a/Frontend/src/app/app.scss
+++ b/Frontend/src/app/app.scss
@@ -10,7 +10,11 @@ ion-header {
     font-size: 25px;
 }
 
+.alert-button {
+    color: #666 !important;
+}
+
 .alert-btn {
-    background-color: #3171e0 !important;
+    background-color: #CC3333 !important;
     color: #fff !important;
 }
