--- a/Frontend/src/app/home/home.page.scss
+++ b/Frontend/src/app/home/home.page.scss
@@ -36,7 +36,7 @@ h2 {
     margin-right: 10px;
     position: relative;
     top: 3px;
-    color: orangered;
+    color: #CC3333;
 }
 
 ion-item-option {
