--- a/Frontend/src/app/pages/matches/matches.page.scss
+++ b/Frontend/src/app/pages/matches/matches.page.scss
@@ -28,9 +28,20 @@ ion-item{
     --padding-start:0px
 }
 
+ion-card {
+    border-radius: 0px;
+}
+
+ion-card-header {
+    background-color: #CC3333;
+}
+
+ion-card-title, ion-card-subtitle {
+    color: #fff;
+}
+
 .list-item {
     background-color: #fff;
-    border-left: 3px solid #3171e0;
     width: 100%;
     height: 100%;
 
