--- a/Frontend/src/theme/variables.scss
+++ b/Frontend/src/theme/variables.scss
@@ -4,8 +4,8 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3171e0;
-  --ion-color-primary-rgb: 49, 113, 224;
+  --ion-color-primary: #CC3333;
+  --ion-color-primary-rgb: 204, 51, 51;
   --ion-color-primary-contrast: #fff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
