--- a/Frontend/src/app/pages/table/table.page.scss
+++ b/Frontend/src/app/pages/table/table.page.scss
@@ -6,3 +6,35 @@ h2 {
 .title-md {
     padding: 10px;
 }
+
+.team-name {
+    font-size: 15px;
+}
+
+.team-stats {
+    font-size: 15px;
+    width: 400px;
+
+    .stat {
+        width: 60px;
+        display: inline-block;
+    }
+}
+
+.table-row {
+        overflow-x: scroll !important;
+        overflow-y: hidden;
+        word-wrap: break-word;
+}
+
+ion-grid {
+    padding: 0px;
+}
+
+ion-list {
+    padding: 0px;
+}
+
+ion-col {
+    padding: 0px;
+}
