--- a/Frontend/src/theme/variables.scss
+++ b/Frontend/src/theme/variables.scss
@@ -12,16 +12,16 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #f8f8f8;
-  --ion-color-secondary-rgb: 248, 248, 248;
+  --ion-color-secondary: rgb(185, 36, 36);
+  --ion-color-secondary-rgb: 185, 36, 36;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
   --ion-color-secondary-shade: #0bb8cc;
   --ion-color-secondary-tint: #24d6ea;
 
-  /** tertiary **/
-  --ion-color-tertiary: #7044ff;
-  --ion-color-tertiary-rgb: 112, 68, 255;
+  /** table **/
+  --ion-color-tertiary: #f6f6f6;
+  --ion-color-tertiary-rgb: 246, 246, 246;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
   --ion-color-tertiary-shade: #633ce0;
