--- a/Frontend/src/app/pages/table/table.page.html
+++ b/Frontend/src/app/pages/table/table.page.html
@@ -51,7 +51,7 @@
                                         <ion-col size="4">
                                             <div class="team-stats">
                                                 <div class="stat">{{ team.stats[0] }}</div>
-                                                <div class="stat">{{ team.stats[1] }}</div>
+                                                <div class="stat"><b>{{ team.stats[1] }}</b></div>
                                                 <div class="stat">{{ team.stats[2] }}</div>
                                                 <div class="stat">{{ team.stats[3] }}</div>
                                                 <div class="stat">{{ team.stats[4] }}</div>
