--- a/Frontend/src/app/pages/table/table.page.html
+++ b/Frontend/src/app/pages/table/table.page.html
@@ -28,7 +28,7 @@
             <ion-col size="6" no-wrap class="table-row">
                 <div class="team-stats">
                     <ion-list>
-                        <ion-item lines="none" color="secondary">
+                        <ion-item class="stats-wrapper" lines="none" color="secondary">
                             <ion-grid>
                                 <ion-row >
                                     <ion-col size="4">
@@ -44,14 +44,14 @@
                                 </ion-row>
                             </ion-grid>
                         </ion-item>
-                        <ion-item lines="none" *ngFor="let team of data.table; let i = index">
+                        <ion-item class="stats-wrapper" lines="none" *ngFor="let team of data.table; let i = index">
                             <div class="c{{ i%2 }}">
                                 <ion-grid>
                                     <ion-row >
                                         <ion-col size="4">
                                             <div class="team-stats">
                                                 <div class="stat">{{ team.stats[0] }}</div>
-                                                <div class="stat"><b>{{ team.stats[1] }}</b></div>
+                                                <div class="stat bg-color"><b>{{ team.stats[1] }}</b></div>
                                                 <div class="stat">{{ team.stats[2] }}</div>
                                                 <div class="stat">{{ team.stats[3] }}</div>
                                                 <div class="stat">{{ team.stats[4] }}</div>
