Added last match components

--- a/Frontend/src/app/pages/table/table.page.html
+++ b/Frontend/src/app/pages/table/table.page.html
@@ -39,6 +39,7 @@
                                             <div class="stat">R</div>
                                             <div class="stat">P</div>
                                             <div class="stat">B</div>
+                                            <!-- <div class="stat form">Forma</div> -->
                                         </div>
                                     </ion-col>
                                 </ion-row>
@@ -56,6 +57,13 @@
                                                 <div class="stat">{{ team.stats[3] }}</div>
                                                 <div class="stat">{{ team.stats[4] }}</div>
                                                 <div class="stat">{{ team.stats[5] }}</div>
+                                                <!-- <div class="stat form">
+                                                    <div class="match win">W</div>
+                                                    <div class="match draw">R</div>
+                                                    <div class="match win">W</div>
+                                                    <div class="match lose">P</div>
+                                                    <div class="match win">W</div>
+                                                </div> -->
                                             </div>
                                         </ion-col>
                                     </ion-row>
