--- a/Frontend/src/app/pages/table/table.page.scss
+++ b/Frontend/src/app/pages/table/table.page.scss
@@ -13,7 +13,7 @@ h2 {
 
 .team-stats {
     font-size: 15px;
-    width: 380px;
+    width: 500px;
     text-align: left;
 
     .stat {
@@ -23,6 +23,37 @@ h2 {
 
         &:first-child {
             margin-left: -15px;
+        }
+
+        &.form {
+            width: 120px;
+            margin-left: 20px;
+            text-align: left;
+
+            .match {
+                width: 18px;
+                height: 18px;
+                display: inline-block;
+                line-height: 19.5px;
+                color: #fff;
+                margin-right: 2px;
+                text-align: center;
+                font-size: 11px;
+                position: relative;
+                top: -1px;
+
+                &.win {
+                    background-color: #28A745;
+                }
+
+                &.draw {
+                    background-color: #dbc927;
+                }  
+
+                &.lose {
+                    background-color: #f44242;
+                }
+            }
         }
     }
 }
