Added team icon

--- a/Frontend/src/app/modals/stats/stats.page.html
+++ b/Frontend/src/app/modals/stats/stats.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
           <ion-back-button defaultHref="/league/table" (click)="dismiss()"></ion-back-button>
       </ion-buttons>
-      <ion-title>{{ team.team }}</ion-title>
+      <ion-title><img src='{{ url }}'>{{ team.team }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
