--- a/Frontend/src/app/pages/matches/matches.page.html
+++ b/Frontend/src/app/pages/matches/matches.page.html
@@ -3,10 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref=""></ion-back-button>
         </ion-buttons>
-        <ion-title>
-        <h2>{{ league.name }}</h2>
-        <ion-note>{{ league.path }}</ion-note>
-        </ion-title>
+        <ion-title>{{ league.name }}</ion-title>
     </ion-toolbar>
 </ion-header>
 
