Dsiplaying team logo

--- a/Frontend/src/app/modals/stats/stats.page.scss
+++ b/Frontend/src/app/modals/stats/stats.page.scss
@@ -61,3 +61,16 @@ ion-title {
         margin-top: -10px;
     }
 }
+
+.image {
+    text-align: center;
+    margin-right: 15px;
+    display: inline-block;
+
+    img {
+        height: 25px;
+        position: relative;
+        top: 7px;
+        margin-top: -10px;
+    }
+}
