--- a/Frontend/src/app/modals/stats/stats.page.html
+++ b/Frontend/src/app/modals/stats/stats.page.html
@@ -49,7 +49,7 @@
                         <div class="match lose">P</div>
                     </ng-container>
                 </ion-col>
-                <ion-col size="8">{{ match.opponent }}</ion-col>
+                <ion-col size="8"><div class="image"><img src='{{ cachedLogos[match.opponent] }}'></div>{{ match.opponent }}</ion-col>
                 <ion-col size="3" class="result">{{ match.result }}</ion-col>
               </ion-row>
             </ion-grid>
