--- a/Frontend/src/app/home/home.page.html
+++ b/Frontend/src/app/home/home.page.html
@@ -21,6 +21,9 @@
                 </ion-label>
             </ion-item>
             <ion-item-options side="end">
+                <ion-item-option  (click)="loadLeagueLogos(league.path)">
+                    <ion-icon class="modyfy" name="refresh"></ion-icon>
+                </ion-item-option>
                 <ion-item-option  (click)="modyfy(league, i)">
                     <ion-icon class="modyfy" name="settings"></ion-icon>
                 </ion-item-option>
