Added information about match

--- a/Frontend/src/app/pages/matches/matches.page.scss
+++ b/Frontend/src/app/pages/matches/matches.page.scss
@@ -67,3 +67,21 @@ ion-infinite-scroll-content {
     height: 0 !important;
     min-height: 1px;
 }
+
+.match_info {
+    padding: 10px 5px;
+    border-bottom: 1px dashed #999;
+    margin-bottom: 5px;
+}
+
+.icon {
+    margin-left: 10px;
+    margin-right: 2px;
+    position: relative;
+    top: 2px;
+    color: #999;
+
+    &:first-of-type {
+        margin-left: 0px;
+    }
+}
