--- a/Frontend/src/app/pages/matches/matches.page.html
+++ b/Frontend/src/app/pages/matches/matches.page.html
@@ -20,6 +20,13 @@
                     <div class="list-item c{{ i%2 }}">
                         <ion-grid>
                             <ion-row>
+                                <ion-col size="12" class="match_info">
+                                    <ion-icon class="icon" name="calendar"></ion-icon>{{ match.date }}
+                                    <ion-icon class="icon" name="time"></ion-icon>{{ match.hour }}
+                                    <ion-icon class="icon" *ngIf="match.viewers !== null" name="person"></ion-icon>{{ match.viewers }}
+                                </ion-col>
+                            </ion-row>
+                            <ion-row>
                                 <ion-col size="5" class="left">{{ match.home }}</ion-col>
                                 <ion-col size="2" class="center">{{ match.result }}</ion-col>
                                 <ion-col size="5" class="right">{{ match.guest }}</ion-col>
